program list overflow fix

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -321,6 +321,7 @@ width: 100%
 .programList hr{
     background-color: #303030;
     margin-top: 0;
+    width:100%;
     
 }
 .programList .sidebarContent .activeprogram{
@@ -332,6 +333,10 @@ width: 100%
 .programList a{
     text-decoration: none;
 }
+.progcontent{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
 .programList a:hover{
     text-decoration: none;
     color: #9884fc !important
@@ -339,7 +344,7 @@ width: 100%
 
 .programList{
     color : #969696;
-    margin: 7% 0;
+    margin: 15vh 0;
 }
 
 /* .programList .sidebar table tr td{
@@ -362,12 +367,13 @@ table tr td{
 .programList .card{
     background-color: #05052b;
     height: 100%;
+    margin-top: 3%;
 }
 
 
 .programList .sidebarContent{
     background-color: #06061b;
-    padding-top: 20px;
+    padding: 20px;
 }
 /* activities styles */
 
